--- a/CodeSmellerWeb.html
+++ b/CodeSmellerWeb.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="SmellStyle.css">
 </head>    
 <body>
-
+    <script src="MainSmell.js"></script>
     <div>
         <form>
             GitHub Link: 
-            <input type="text">
+            <input type="url" id="Input"></input>
+            <input type="submit" onclick="MainSmell()" value="Enter">
             <br><br>
         </form>
         
         
         <textarea id = "Output" cols="30" rows="20"></textarea>
     </div>
-    <script src="script.js"></script>
+
 </body>
 </html>
