changed sumbit to button

--- a/CodeSmellerWeb.html
+++ b/CodeSmellerWeb.html
@@ -11,11 +11,10 @@
     <div>
         <form>
             GitHub Link: 
-            <input type="url" id="Input"></input>
-            <input type="submit" onclick="MainSmell()" value="Enter">
+            <input type="text" id="Input"></input>
+            <input type="button" value="Enter" id="btn" onclick="MainSmell()">
             <br><br>
         </form>
-        
         
         <textarea id = "Output" cols="30" rows="20"></textarea>
     </div>
