--- a/CodeSmellerWeb.html
+++ b/CodeSmellerWeb.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scal=1.0">
     <title>Code Analysis Tool</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
     <link rel="stylesheet" href="../GitHubSmell/SmellStyle.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="../GitHubSmell/imgs/favicon.ico">
 </head>    
 
 <body>
     <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
-    <script src="MainSmell.js"></script>
+    <script src="./SmellStyle.css"></script>
     
 
-<div class="container-fluid">
+<div class="container-fluid  px-0">
     <!-- header with nav bar -->
     <div class="row col-lg-12 col-md-12 col-xs-12 my-0">
         <div class="col-lg-6 col-sm-6 mx-0 px-0">
@@ -26,27 +26,28 @@
             </nav>
         </div>
         <div class="col-lg-6  col-sm-6 bg-light static-top text-right mx-0 px-0">
-            <a class="navbar-brand" href="#">Clayton State</a>
+            <a class="navbar-brand" target="_blank" href="www.clayton.edu" style=" color:rgb(216, 150, 75);display: inline-flex;background: url('https://upload.wikimedia.org/wikipedia/en/thumb/7/71/Clayton_State_Loch_Orange_PNG.png/225px-Clayton_State_Loch_Orange_PNG.png') no-repeat;">Clayton State</a>
         </div>
     </div>
     <!-- /header with nav bar -->
 
     <!-- Central Section -->
-    <div class="container" style="background-image: url('./imgs/bg_2.jpg');height: 400px;">
+    <div class="container-fluid" style="background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/019.webp');
+     height: 500px;">
         <div class="row">
-            <div class="col-xxl-12 col-lg-12 col-md-12 col-xs-12">
-                <h4 class="mb-5 text-center">Enter the GitHub link below</h4>
+            <div class="col-xxl-12 col-lg-12 col-md-12 col-xs-12 my-5">
+                <h4 class="text-center">Enter the GitHub link below</h4>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
             <div class="">
                 <form class="form-subscribe" id="contactForm" action= "http://localhost:3000/process_get" method = "GET">
                     <div class="row">  
-                        <div class="col-xl-8 col-lg-8 col-md-8 col-xs-6">
+                        <div class="col-xl-10 col-lg-10 col-md-10 col-xs-8">
                            <input class="form-control form-control-lg" type="url" placeholder="https://github.com/project?=csci4800" data-sb-validations="required,url" />
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-4 col-xs-6">
-                            <button class="btn btn-success btn-lg" id="submitButton" type="submit">Submit</button>
+                        <div class="col-xl-2 col-lg-2 col-md-2 col-xs-8">
+                            <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
                         </div>
                     </div>     
                 </form>
@@ -56,9 +57,9 @@
     <!-- /Central Section -->
 
     <!-- footer -->
-    <footer class="text-center text-white" style="background-color: #f1f1f1;">
+    <footer class="text-center text-white fixed-bottom" style="background-color: #5c5d83;">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            <p class="text-muted text-center">&copy; LaunchpadTeam 2022. Made with <span class="iconify" data-icon="ion:heart" color="red"></span> by Tanner, Vipoup, & Mamadou.</p>
+            <p class=" text-center" style="color:#fff;">&copy; LaunchpadTeam 2022. Made with <span class="iconify" data-icon="ion:heart" color="red"></span> by Tanner, Vipoup, & Mamadou.</p>
         </div>
     </footer>
      <!-- /footer -->
