added GHLink tag to input in HTML

--- a/CodeSmellerWeb.html
+++ b/CodeSmellerWeb.html
@@ -45,7 +45,7 @@
                 <form class="form-subscribe" id="contactForm" action= "http://localhost:3000/process_get" method = "GET">
                     <div class="row">  
                         <div class="col-xl-10 col-lg-10 col-md-10 col-xs-8">
-                           <input class="form-control form-control-lg" type="url" placeholder="https://github.com/project?=csci4800" data-sb-validations="required,url" />
+                           <input class="form-control form-control-lg" type="url" placeholder="https://github.com/project?=csci4800" data-sb-validations="required,url" name = "GHLink" />
                         </div>
                         <div class="col-xl-2 col-lg-2 col-md-2 col-xs-8">
                             <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
